[gd_scene load_steps=4 format=3 uid="uid://faction-base-scene"]

[ext_resource type="Script" path="res://scripts/world/FactionBase.gd" id=1]
[ext_resource type="Script" path="res://scripts/units/HQ.gd" id=2]
[ext_resource type="Texture2D" path="res://assets/game/tiles/buildingTiles_010.png" id=3]

[node name="FactionBase" type="Node2D"]
script = ExtResource("1")

[node name="Visual" type="Sprite2D" parent="."]
texture = ExtResource("3")
region_enabled = true
region_rect = Rect2(0, 0, 132, 127)
modulate = Color(1, 1, 1, 0.7)

[node name="HQ" type="Node2D" parent="."]
script = ExtResource("2")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -48)

[node name="TowerSlots" type="Node2D" parent="."]

[node name="Slot1" type="Marker2D" parent="TowerSlots"]
position = Vector2(-96, 40)

[node name="Slot2" type="Marker2D" parent="TowerSlots"]
position = Vector2(96, 40)

[node name="Slot3" type="Marker2D" parent="TowerSlots"]
position = Vector2(0, -96)
